--- a/src/main/resources/static/css/reservation/baggage.css
+++ b/src/main/resources/static/css/reservation/baggage.css
@@ -426,15 +426,12 @@ ul, ol, li {
 	font-size: 0px;
 }
 
-.blind {
+/* .blind {
 	display: inline-block;
 	position: absolute;
-	top: -9999px;
-	left: -9999px;
 	height: 0px;
 	font-size: 1px;
-	text-indent: -9999px;
-}
+} */
 
 .range_slider .range_slider_info dl dt, .range_slider .range_slider_info dl dd {
 	display: inline-block;
@@ -463,4 +460,43 @@ ul, ol, li {
 	font-size: 36px;
 	font-weight: 700;
 	color: rgb(210, 44, 38);
+}
+.baggage_area .slidecontainer {
+  width: 100%;
+}
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%; 
+  background: #fd5185;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #fd5185;
+  cursor: pointer;
+}
+.slidecontainer .kgInfo{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 15px;
+	font-size: 20px;
+	font-weight: 600;
 }
