--- a/src/main/resources/templates/adminpage/reservationManagement.html
+++ b/src/main/resources/templates/adminpage/reservationManagement.html
@@ -12,49 +12,11 @@
         <input class="form-control me-2 " type="search" placeholder="고객번호 검색" aria-label="Search" name="ctNo">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
-    <table class="table table-hover mx-auto border-dark" style="text-align: center;">
-        <thead>
-        <tr class="table-dark">
-            <th>예약번호</th>
-            <th>고객번호</th>
-            <th>반려동물</th>
-            <th>예약 전화번호</th>
-            <th>예약 이메일</th>
-            <th>예약날짜</th>
-            <th>성인</th>
-            <th>청소년</th>
-            <th>유아</th>
-            <th>이륙 시간</th>
-            <th>착륙 시간</th>
-            <th>발권 여부</th>
-        </tr>
-        </thead>
+        <!--    진행중인 예약 리스트    -->
         <th:block th:include="/adminpage/reservationManagementList"></th:block>
-    </table>
-    <nav aria-label="Page navigation example" th:include="/adminpage/reservationPagingNav">
-    </nav>
-<!--    <p th:text="${reservation}"></p>-->
-    <h1>지난 예약 목록</h1>
-    <table class="table table-hover mx-auto border-dark" style="text-align: center;">
-        <thead>
-        <tr class="table-dark">
-            <th>예약번호</th>
-            <th>고객번호</th>
-            <th>반려동물</th>
-            <th>예약 전화번호</th>
-            <th>예약 이메일</th>
-            <th>예약날짜</th>
-            <th>성인</th>
-            <th>청소년</th>
-            <th>유아</th>
-            <th>이륙 시간</th>
-            <th>착륙 시간</th>
-            <th>발권 여부</th>
-        </tr>
-        </thead>
-        <th:block th:include="/adminpage/reservationManagementAfterList"></th:block>
-    </table>
 
+        <!--    끝난 예약 리스트    -->
+        <th:block th:include="/adminpage/reservationManagementAfterList"></th:block>
     <div class="mb-3" style="max-width: 300px;">
         <div class="input-group">
             <label class="input-group-text">총 예약 개수</label>
