--- a/src/main/resources/templates/adminpage/userManagement.html
+++ b/src/main/resources/templates/adminpage/userManagement.html
@@ -27,7 +27,7 @@
         </thead>
         <th:block th:include="/adminpage/customerList"></th:block>
     </table>
-    <nav aria-label="Page navigation example" th:include="/adminpage/pagingNav">
+    <nav aria-label="Page navigation example" th:include="/adminpage/customerPagingNav">
     </nav>
 </main>
 </body>
