--- a/src/main/resources/templates/adminpage/coupon.html
+++ b/src/main/resources/templates/adminpage/coupon.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <title>쿠폰 관리</title>
 </head>
 <body>
-	<header th:include="/adminheaderNav"></header>
-	<main>
-		<h1>쿠폰 지금 하기</h1>
-		<table>
-			<thead>
-				<tr>
-					<th>쿠폰 목록</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr class="" th:onclick="" th:each="coupon:${couponList}">
-					<th th:text="${coupon.cpName}"></th>
-					<th th:text="${coupon.cpDiscount}"></th>
-					<th th:text="${#dates.postTime(coupon.cpStart,YYYY년MM월dd일 HH시mm분)}"></th>
-					<th th:text="${#dates.postTime(coupon.cpEnd,YYYY년MM월dd일 HH시mm분)}"></th>
-				</tr>
-			</tbody>
-		</table>
-	</main>
+<header th:include="/adminpage/headerNav"></header>
+<main class="container mx-auto mt-5" style="max-width: 80%;">
+    <h1>쿠폰 관리 하기</h1>
+    <a class="btn btn-outline-primary" th:href="">생성 하기</a>
+    <table class="table table-hover mx-auto border-dark" style="text-align: center;">
+        <thead>
+        <tr class="table-dark">
+            <th>번호</th>
+            <th>이름</th>
+            <th>할인율</th>
+            <th>시작일</th>
+            <th>종료일</th>
+        </tr>
+        </thead>
+        <tbody class="table-striped">
+        <tr class="" th:onclick="" th:each="cp:${paging.list}">
+            <td th:text="${cp.cpNo}"></td>
+            <td th:text="${cp.cpName}"></td>
+            <td th:text="${cp.cpDiscount}"></td>
+            <td th:text="${#dates.format(cp.cpStart, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#dates.format(cp.cpEnd, 'yyyy-MM-dd')}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <th:block th:include="/adminpage/customerPagingNav"></th:block>
+</main>
 </body>
 </html>
