--- a/src/main/resources/templates/adminpage/customerList.html
+++ b/src/main/resources/templates/adminpage/customerList.html
@@ -10,48 +10,71 @@
     <td th:text="${customer.ctPhone}"></td>
     <td th:text="${customer.ctGender}"></td>
     <td>
-        <a  class="btn btn-primary" data-bs-toggle="modal" th:href="'#ctUpdate'+${customer.ctNo}">
+        <a class="btn btn-primary" data-bs-toggle="modal" th:href="'#ctUpdate'+${customer.ctNo}">
             수정
         </a>
-        <div class="modal fade" th:id="'ctUpdate'+${customer.ctNo}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" th:id="'ctUpdate'+${customer.ctNo}" tabindex="-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content" >
+                <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">회원 수정</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form th:action="'/adminpage/customerUpdate.do?ctNo='+${customer.ctNo}" method="post">
+                        <form name="customerUpdateForm"
+                              th:action="'/adminpage/customerUpdate.do?ctNo='+${customer.ctNo}" method="post">
                             <input type="hidden" th:value="${customer.ctNo}">
                             <div class="mb-3 input-group">
                                 <label class="col-form-label input-group-text">이름</label>
-                                <input type="text" class="form-control" name="ctName" th:value="${customer.ctName}">
+                                <input onchange="checkCustomerName(event)" type="text" class="form-control"
+                                       name="ctName" th:value="${customer.ctName}">
+                                <div class="valid-feedback">
+                                    사용할 수 있는 이름입니다.
+                                </div>
+                                <div class="invalid-feedback" id="ctNameInvalid">
+                                    사용 중인 이름입니다.
+                                </div>
                             </div>
                             <div class="mb-3 input-group">
                                 <label class="col-form-label input-group-text">아이디</label>
-                                <input type="text" class="form-control" name="ctId" th:value="${customer.ctId}">
+                                <input onchange="checkCustomerId(event)" type="text" class="form-control" name="ctId"
+                                       th:value="${customer.ctId}">
+                                <div class="valid-feedback">
+                                    사용할 수 있는 아이디입니다.
+                                </div>
+                                <div class="invalid-feedback" id="userIdInvalid">
+                                    사용 중인 아이디입니다.
+                                </div>
                             </div>
+
                             <div class="mb-3 input-group">
                                 <label class="col-form-label input-group-text">생년월일</label>
-                                <input type="date" class="form-control" name="ctBirth" th:value="${#dates.format(customer.ctBirth, 'yyyy-MM-dd')}">
+                                <input type="date" class="form-control" name="ctBirth"
+                                       th:value="${#dates.format(customer.ctBirth, 'yyyy-MM-dd')}">
                             </div>
+
                             <div class="mb-3 input-group">
                                 <label class="col-form-label input-group-text">이메일</label>
-                                <input type="text" class="form-control" name="ctEmail" th:value="${customer.ctEmail}">
+                                <input type="text" class="form-control"
+                                       name="ctEmail" th:value="${customer.ctEmail}">
                             </div>
+
                             <div class="mb-3 input-group">
                                 <label class="col-form-label input-group-text">휴대전화</label>
-                                <input type="text" class="form-control" name="ctPhone" th:value="${customer.ctPhone}">
+                                <input type="text" class="form-control"
+                                       name="ctPhone" th:value="${customer.ctPhone}">
+
                             </div>
                             <div class="mb-3 input-group">
-                                <select class="form-select" aria-label="Default select example" name="ctGender">
-                                    <option selected>성별</option>
+                                <select class="form-select" aria-label="Default select example" name="ctGender" th:default="${customer.ctGender}">
+                                    <option selected></option>
                                     <option value="남">남</option>
                                     <option value="여">여</option>
                                 </select>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">성별</button>
                                 <button type="submit" class="btn btn-primary">수정</button>
                             </div>
                         </form>
@@ -60,15 +83,16 @@
             </div>
         </div>
         <!-- delete modal -->
-        <a  class="btn btn-danger" data-bs-toggle="modal" th:href="'#ctDelete'+${customer.ctNo}">
+        <a class="btn btn-danger" data-bs-toggle="modal" th:href="'#ctDelete'+${customer.ctNo}">
             삭제
         </a>
         <!-- Modal -->
-        <div class="modal fade" th:id="'ctDelete'+${customer.ctNo}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" th:id="'ctDelete'+${customer.ctNo}" tabindex="-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" >삭제</h1>
+                        <h1 class="modal-title fs-5">삭제</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -76,7 +100,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <a  th:href="'/adminpage/customerDelete.do?ctNo='+${customer.ctNo}" class="btn btn-danger">삭제</a>
+                        <a th:href="'/adminpage/customerDelete.do?ctNo='+${customer.ctNo}" class="btn btn-danger">삭제</a>
                     </div>
                 </div>
             </div>
