--- a/src/main/resources/templates/adminpage/headerNav.html
+++ b/src/main/resources/templates/adminpage/headerNav.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
+<script defer="defer" src="/js/admin/duplicateCheck.js"></script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/adminpage/management.do">HOME</a>
@@ -24,10 +25,22 @@
                     <a class="nav-link" href="/adminpage/counselling.do">문의보기</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/createCoupon.do">쿠폰관리</a>
+                    <a class="nav-link" href="/adminpage/couponManagement.do">쿠폰관리</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/adminpage/coupon.do">쿠폰지급</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adminpage/loginpage.do">로그인</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adminpage/logout.do">로그아웃</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adminpage/adminDetail.do">관리자정보</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/adminpage/jsonApi.do">관리자정보</a>
                 </li>
             </ul>
         </div>
