--- a/src/main/resources/templates/login/findId.html
+++ b/src/main/resources/templates/login/findId.html
@@ -19,7 +19,7 @@
 			<div class="input-group input-group-lg mb-3">
 				<span class="input-group-text" id="inputEmail">이메일</span>
 			  	<input name="ctEmail" type="email" class="form-control" placeholder="이메일을 입력하세요" id="inputEmail" >
-			  	<button onClick="sendbtnOtp()" type="button" class="btn btn-outline-secondary" name="btnOtp" id="btnOtp">인증번호받기</button>
+			  	<a type="button" class="btn btn-outline-secondary" name="btnOtp" id="btnAuthNo">인증번호받기</a>
 			</div>
 			<div class="input-group mb-3">
 				<input type="text" class="form-control" name="otpNum" id="otpNum" placeholder="인증번호 입력" disabled>
