--- a/src/main/resources/templates/adminpage/findPassword.html
+++ b/src/main/resources/templates/adminpage/findPassword.html
@@ -22,10 +22,17 @@
 					</div>
 				</div>
 			</div>
-			<div>
-				<h3>이름</h3>
-				<input name="" type="text" class="" id="" placeholder="">
-				<label for="" class="">한글로 입력해주세요</label>
+			<div class="mb-3 row">
+				<label class="col-sm-2 col-form-label">이름</label>
+				<div class="col-sm-10">
+					<input name="admin_name" type="text" class="form-control" value="">
+					<div class="valid-feedback" id="admin_nameValid">
+						일치한 이름입니다.
+					</div>
+					<div class="invalid-feedback" id="admin_nameInvalid">
+						일치하지 않는 이름입니다.
+					</div>
+				</div>
 			</div>
 			<div>
 				<h3>이메일</h3>
