--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -7,10 +7,8 @@
 </head>
 <body>
 	<div class="f_info">
-		<div class="f_logo">
-			<a href="#">JB항공</a>
-		</div>
 		<div class="f_addr">
+			<p>JB항공</p>
 			<p>
 				<span>고객센터. 1688-1688</span> |
 				<span>(9:00 ~ 19:00)</span>
