--- a/src/main/resources/templates/headerNav.html
+++ b/src/main/resources/templates/headerNav.html
@@ -10,7 +10,7 @@
 <!-- 삼단메뉴: 항공권예매, 나의 예약조회, 이벤트, 고객센터, 항공편현황, 마이페이지 해야함-->
 	<nav>
 			<div class="logo">
-				<a href="#">JB항공</a>
+				<a href="/">JB항공</a>
 			</div>
 			<div class="gnb">
 				<a href="#">예매</a>
@@ -20,6 +20,7 @@
 			</div>
 			<div class="lnb">
 	            <a href="#">로그인</a>
+	            <a href="#">로그아웃</a>	            
 	            <a href="#">회원가입</a>
 				<a href="#">마이페이지</a>
 				<a href="#">전체메뉴</a>
