--- a/src/main/resources/static/css/event/eventPage.css
+++ b/src/main/resources/static/css/event/eventPage.css
@@ -8,3 +8,16 @@ body {
 	width: 1100px;
 	margin: 0 auto;
 }
+
+.main_tit_wrap .main_tit {
+    font-size: 28px;
+    font-weight: 500;
+    color: #1a1a1a;
+    text-align: center;
+}
+
+
+
+.slick-slide1{
+	border: 1px solid black;
+}
