--- a/src/main/resources/templates/search/flightsearch.html
+++ b/src/main/resources/templates/search/flightsearch.html
@@ -4,34 +4,34 @@
 <meta charset="UTF-8">
 <title>예매 페이지</title>
 	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-	<script src="/bootstrap/js/bootstrap.min.js"></script>
-	<link href="/css/flightsearch.css" rel="stylesheet">
+	<link href="/css/search/flightsearch.css" rel="stylesheet">
 </head>
 <body>
+	<header th:include="/headerNav"></header>
 	<div class="container">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<div class="tit_container">
+		<div class="content">
+			<div class="content_main">
+				<div class="content_header">
+					<div class="tit_cotainer">
 						<h2 class="pg_tit">항공권 예매</h2>
 					</div>
 				</div>
-				<div class="modal-body">
-					<div class="research_option_container">
+				<hr>
+				<div class="content_body">
+					<div class="search_option_container">
 						<div class="option_container">
 							<div class="option_selector">
 								<input type="radio" class="btn-check" name="options"
-									id="round-trip-option" autocomplete="off"> <label
-									for="round-trip-option" class="btn btn-danger">왕복</label>
+									id="round-trip-option"> <label
+									for="round-trip-option" class="btn btn-outline-danger">왕복</label>
 								<input type="radio" class="btn-check" name="options"
-									id="one-way-option" autocomplete="off" checked> <label
-									for="one-way-option" class="btn btn-danger">편도</label> 
+									id="one-way-option"> <label
+									for="one-way-option" class="btn btn-outline-danger">편도</label> 
 							</div>
 						</div>
 					</div>
-					<hr>
-					<div class="research_plan_container">
-						<div class="research_plan">
+					<div class="search_plan_container">
+						<div class="search_plan">
 							<form action="">
 								<div class="airport_selector">
 									<div class="depart_airport_selector selector_option">
@@ -54,42 +54,43 @@
 											<option value="2">LAN4</option>
 										</select>
 									</div>
+									
 									<div class="plan_date selector_option">
 										<label for="depart_date" class="sub-airport-tit">탑승일</label> <input
 											type="date" id="depart_date" class="depart_date selector_box">
 									</div>
 								</div>
+								
 								<div class="passenger_count">
 									<div class="adult_count count_box">
 										<label for="adult_count" class="sub-passenger-tit">성인</label>
-										<div class="btn-group" role="group" aria-label="Basic example">
-											<button type="button" class="btn btn-primary">-</button>
+										<div class="btn-group" role="group">
+											<button type="button" class="btn btn-secondary">-</button>
 											<div class="input_container">
 												<input type="text" id="adult_count" value="1">
 											</div>
-
-											<button type="button" class="btn btn-primary">+</button>
+											<button type="button" class="btn btn-secondary">+</button>
 										</div>
 									</div>
 									<div class="teen_count count_box">
 										<label for="teen_count" class="sub-passenger-tit">소아</label>
-										<div class="btn-group" role="group" aria-label="Basic example">
-											<button type="button" class="btn btn-primary">-</button>
+										<div class="btn-group" role="group">
+											<button type="button" class="btn btn-secondary">-</button>
 											<div class="input_container">
 												<input type="text" id="teen_count" value="0">
 											</div>
 
-											<button type="button" class="btn btn-primary">+</button>
+											<button type="button" class="btn btn-secondary">+</button>
 										</div>
 									</div>
 									<div class="baby_count count_box">
 										<label for="baby_count" class="sub-passenger-tit">유아</label>
-										<div class="btn-group" role="group" aria-label="Basic example">
-											<button type="button" class="btn btn-primary">-</button>
+										<div class="btn-group" role="group">
+											<button type="button" class="btn btn-secondary">-</button>
 											<div class="input_container">
 												<input type="text" id="baby_count" value="0">
 											</div>
-											<button type="button" class="btn btn-primary">+</button>
+											<button type="button" class="btn btn-secondary">+</button>
 										</div>
 									</div>
 								</div>
@@ -97,14 +98,15 @@
 						</div>
 					</div>
 				</div>
-				<div class="modal-footer">
+				
+				<div class="content_footer">
 					<div class="btn_group">
-						<div class="cancel_research btn btn-outline-secondary">취소</div>
-						<div class="submit_research btn btn-outline-danger">조회</div>
+						<div class="submit_search btn btn-outline-danger">항공편 검색</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<footer th:include="/footerNav"></footer>
 </body>
 </html>
