--- a/src/main/resources/templates/adminpage/headerNav.html
+++ b/src/main/resources/templates/adminpage/headerNav.html
@@ -19,28 +19,10 @@
                     <a class="nav-link" href="/adminpage/reservationManagement.do">예약관리</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/reservationDetailManagement.do">예약상세조회</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/counselling.do">문의보기</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/couponManagement.do">쿠폰관리</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/coupon.do">쿠폰지급</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/loginpage.do">로그인</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/logout.do">로그아웃</a>
+                    <a class="nav-link" href="/adminpage/couponList.do">쿠폰관리</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/adminpage/adminDetail.do">관리자정보</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/adminpage/jsonApi.do">관리자정보</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
